<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joshjonalagada.chatterboxversion2.LoginController">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="Password" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwordField"

            android:ems="10"
            android:inputType="textPersonName"
            android:text="Username"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordField"
            android:layout_below="@+id/passwordField"
            android:layout_marginTop="110dp"
            android:text="Submit" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/submitButton"
            android:layout_alignStart="@+id/passwordField"
            android:text="Register" />

        <TextView
            android:id="@+id/credentialsPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordField"
            android:layout_alignStart="@+id/passwordField"
            android:layout_below="@+id/passwordField" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
